Website Update - Blog, Sidebar, Bulma 0.7.0 (#16)
* Updated submodules. Updated SCSS for +spacing, entries CSS, updated config for descriptions. Gulp now uses yarn. etc.

* Added authors.json, sidebar, and yarn.lock file.

* Updated shared LESS. Updated gulp to combine js vendor files into main script. Refactored partials / renamed. Added blank template files for partials. Updated homepage.

* Updated homepage, banners, etc.

* Removed twitterBanner placeholder.

* Updated sidebar with GA.

--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -1,8 +1,8 @@
-{{ define "main" }} {{ partial "home_hero" . }}
+{{ define "header" }} {{ partial "homepage/hero" . }}
 
 <!-- Wiki Hero -->
 <section class="hero is-info">
-    <div class="hero-body">
+    <div class="hero-body py-lg">
         <div class="container">
             <nav class="columns">
 
@@ -39,114 +39,22 @@
         </div>
     </div>
 </section>
+{{ end }}
 
-<!-- About Yuzu Section -->
-<section class="hero">
-    <div class="hero-body">
-        <div class="container">
-            <div id="about-section"></div>
-            <h1 class="title">About</h1>
-            <div class="content">
-                <p>
-                    yuzu is a work-in-progress Nintendo Switch emulator. yuzu is an open-source project, licensed under the GPLv2 (or any later
-                    version). yuzu has been designed with portability in mind, with builds available for Windows, Linux,
-                    and macOS. The project was started in spring of 2017 by
-                    <a href="https://github.com/bunnei">bunnei</a>, one of the original authors of the popular
-                    <a href="https://citra-emu.org/">Citra 3DS emulator</a>, to experiment with and research the Nintendo Switch. Due to the similarities
-                    between Switch and 3DS, yuzu was developed as a fork of Citra. This means that it uses the same project
-                    architecture, and both emulators benefit from shared improvements. During the early months of development,
-                    work was done in private, and progress was slow. However, as Switch reverse-engineering and homebrew
-                    development became popular, work on yuzu began to take off as well.
-                </p>
+{{ define "main" }}
+<section class="pt-lg">
+    {{ $pag := .Paginate (where .Data.Pages "Type" "entry") 4 }}
 
-                <p>
-                    In January of 2018, the yuzu team was formed out of several Citra developers, and the decision was made to release the project
-                    publicly. As an emulator, yuzu is in its infancy, and is only currently useful for Switch reverse-engineering
-                    and homebrew development.
-                </p>
-            </div>
-
-            <div class="tile is-ancestor">
-                <div class="tile is-parent">
-                    <div class="card">
-                        <div class="card-content">
-                            <p class="title is-4">Can I play Switch games?</p>
-                            <div class="content">
-                                No – at this time, yuzu does not run any commercial Switch games. yuzu can boot some games, to varying degrees of success,
-                                but does not implement any of the necessary GPU features to render 3D graphics.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="tile is-parent">
-                    <div class="card">
-                        <div class="card-content">
-                            <p class="title is-4">When will yuzu run games?</p>
-                            <div class="content">
-                                In short – we do not know how soon games might run. While yuzu is making great progress, Switch emulation is very complex.
-                                Running games is one of the team’s top priorities, so we are actively working toward that
-                                goal!
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="tile is-parent">
-                    <div class="card">
-                        <div class="card-content">
-                            <p class="title is-4">Where does the name come from?</p>
-                            <div class="content">
-                                <a href="https://en.wikipedia.org/wiki/Citrus_junos">Citrus junos, or yuzu (from Japanese ユズ)</a>, is a citrus fruit, most commonly used in Asian
-                                cuisines. This name was chosen as an homage to Citra and its developers, whose work gave
-                                the foundation for this project.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="columns is-multiline">
+    {{ range $pag.Pages }}
+        <div class="column is-half">
+            {{ partial "entry/summary" . }}
         </div>
+    {{ end }}
+    </div>
+    
+    <div class="has-text-centered">
+        <a class="pagination-next" href="{{ .Site.BaseURL }}/entry/">View more posts</a>
     </div>
 </section>
-
-<!-- Advertisement -->
-<section class="hero is-info">
-    <div class="hero-body">
-        <div class="container has-text-centered">
-            <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}"
-                data-ad-slot="{{ .Site.Params.GoogleAdsenseSlot }}"></ins>
-        </div>
-    </div>
-</section>
-
-<!-- Twitter Feed -->
-<section class="section">
-    <div class="container">
-        <h1 class="title">Progress and Updates Feed</h1>
-        <div class="columns is-multiline">
-            {{- range sort .Site.Data.twitter "order" }}
-            <div class="column is-4">
-                {{ partial "widget/tweet.html" . }}
-            </div>
-            {{- end }}
-        </div>
-    </div>
-</section>
-
-<!-- Credits Section -->
-<section class="hero">
-    <div class="hero-body">
-        <div class="container has-text-centered has-text-grey">
-            <p>Making an emulator for the Nintendo Switch is a massive effort, and we’d like to give a huge shout out and thank you to all the folks involved!</p>
-            
-            <p>Thank you to the Citra team for providing an excellent foundation for this project.
-                <a href="https://github.com/Subv">Subv</a>, <a href="https://github.com/MerryMage">MerryMage</a>, <a href="https://github.com/jroweboy">jroweboy</a>, <a href="https://github.com/bunnei">bunnei</a>, for their work to jumpstart yuzu.</p>
-            <p><a href="https://github.com/chris062689">Flame Sage</a>, <a href="https://github.com/j-selby">Selby</a>, <a href="https://github.com/Schplee">Flamboyant Ham</a>, for their work on our web infrastucture.</p>
-            <p>&nbsp;</p>
-            <p>Furthermore, we'd like to thank the <a href="https://reswitched.tech/">ReSwitched team</a>, this project would not exist without their excellent work and willingness to share their knowledge:
-                <a href="https://github.com/SciresM/">SciresM</a>, <a href="https://github.com/daeken">Daeken</a>, <a href="https://github.com/Normmatt">Normmatt</a>, <a href="https://github.com/ogniK5377">ogniK</a>, <a href="https://github.com/hthh">hthh</a>, <a href="https://github.com/TuxSH">TuxSH</a>, <a href="https://github.com/hedgeberg">hedgeberg</a>, <a href="https://github.com/misson20000">misson20000</a>.</p>
-        </div>
-    </div>
-</section>
-
 {{ end }}
