--- a/site/layouts/partials/layout/sidebar.html
+++ b/site/layouts/partials/layout/sidebar.html
@@ -1,10 +1,11 @@
 <div class="pt-md">
     <figure class="image" style="width: 415px; height: 335px; margin: auto;">
-        <ins class="adsbygoogle" style="display:inline-block; width:400px; height:300px"
+        <ins class="adsbygoogle"
+            style="display:block"
             data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}"
             data-ad-slot="5249468939"
             data-ad-format="auto">
         </ins>
         <p class="is-size-5 has-text-centered">Advertisement</p>
     </figure>
-</div> 
+</div>
