Updated shared-hugo-scripts. Updated shared-bulma-theme. Added highcharts js dependency. Moved data/ to shared-bulma-theme. Updated shared scss.

--- a/src/scss/shared.scss
+++ b/src/scss/shared.scss
@@ -58,3 +58,10 @@ $blog-entry-single-height: 26em;
 .blog-entry-header.single > div:first-child {
     padding-top: $blog-entry-single-height - 8em;
 }
+
+// CompatDB
+.is-square {
+    display: inline-block;
+    width: 16px;
+    height: 16px;
+}
