--- a/src/scss/shared_customization.scss
+++ b/src/scss/shared_customization.scss
@@ -6,3 +6,6 @@ $navbar-height: 4rem;
 
 // Allows for larger icons with less padding
 $navbar-item-img-max-height: 2.75rem;
+
+// Table background colors should be transparent.
+$table-background-color: transparent;
