Updated adsense sidebar and downloads page.

--- a/site/layouts/page/downloads.html
+++ b/site/layouts/page/downloads.html
@@ -22,8 +22,7 @@
 <section class="hero is-info">
     <div class="hero-body">
         <div class="has-text-centered">
-            <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}"
-                data-ad-slot="1038554045"></ins>
+            <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-4126545610079023" data-ad-slot="1038554045"></ins>
         </div>
     </div>
 </section>
