--- a/site/layouts/partials/layout/sidebar.html
+++ b/site/layouts/partials/layout/sidebar.html
@@ -1,7 +1,9 @@
 <div class="pt-md">
+    <!-- yuzu-auto-resize-2 -->
     <ins class="adsbygoogle"
-    style="display:inline-block;width:300px;height:250px"
-    data-ad-client="{{ .Site.Params.GoogleAdsenseClient }}"
-    data-ad-slot="6961191180"></ins>
+        style="display:block"
+        data-ad-client="ca-pub-4126545610079023"
+        data-ad-slot="6276099127"
+        data-ad-format="auto"></ins>
     <p class="is-size-5 has-text-centered">Advertisement</p>
 </div>
