--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -43,14 +43,16 @@
 
 {{ define "main" }}
 <section class="section">
-    <div class="columns is-multiline">
+    <div class="columns">
         {{ range first 2 (where (where .Data.Pages ".Params.twitter" "==" nil) "Type" "entry") }}
         <div class="column is-half">
                 {{ partial "entry/summary" . }}
             </div>
         {{ end }}
+    </div>
 
-        {{ range first 2 (where (where .Data.Pages ".Params.twitter" "!=" nil) "Type" "entry") }}
+    <div class="columns is-multiline">
+        {{ range first 4 (where (where .Data.Pages ".Params.twitter" "!=" nil) "Type" "entry") }}
         <div class="column is-half">
             {{ partial "entry/summary" . }}
         </div>
