Fix current state of yuzu in downloads page

--- a/site/layouts/page/downloads.html
+++ b/site/layouts/page/downloads.html
@@ -5,8 +5,8 @@
 
         <article class="message has-text-weight-semibold">
             <div class="message-body">
-                <p>At this time, yuzu does not run any commercial Switch games. yuzu can boot some games, to varying degrees
-                    of success, but does not implement any of the necessary GPU features to render 3D graphics. </p>
+                <p>At this time, yuzu can boot some commercial Switch games to varying degrees of success,
+                    but your experience may vary between games and for different combinations of host hardware.</p>
                 <p>
                     <a href="https://yuzu-emu.org/wiki/switch-homebrew/">Click here</a> for homebrew games you can download and test.</p>
             </div>
