--- a/src/scss/yuzu/yuzu.scss
+++ b/src/scss/yuzu/yuzu.scss
@@ -97,7 +97,7 @@ a:hover {
   background: $dark;
 }
 
-// Workaround for browsers without JavaScript for the downloads pagge
+// Workaround for browsers without JavaScript for the downloads page
 #install-view, #manual-package-view {
   display: none;
 }
