--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,14 +6,14 @@
         <div class="container">
             <nav class="columns">
 
-                <a class="column has-text-centered" href="{{ .Site.BaseURL }}/wiki/home/">
+                <a class="column has-text-centered" href="{{ .Site.BaseURL }}/help/quickstart/">
                     <span class="icon is-actionable is-large">
                         <i class="fas fa-3x fa-code"></i>
                     </span>
                     <p class="title is-4">
                         <strong>Getting Started</strong>
                     </p>
-                    <p class="subtitle is-6">Build the yuzu source and make a contribution</p>
+                    <p class="subtitle is-6">How to get up and running with games</p>
                 </a>
 
                 <a class="column has-text-centered" href="{{ .Site.BaseURL }}/wiki/switch-hardware-and-software/">
