Fix manual download button color

--- a/src/scss/yuzu/yuzu.scss
+++ b/src/scss/yuzu/yuzu.scss
@@ -105,3 +105,8 @@ a:hover {
 .dl-button, #platform-unsupported {
   display: none;
 }
+
+// Fix manual download button text
+#view-package-listing-button {
+  color: #363636;
+}
