css fixes for readability

--- a/src/scss/yuzu/yuzu.scss
+++ b/src/scss/yuzu/yuzu.scss
@@ -101,7 +101,8 @@ a:hover {
 // Make text nicer to read in articles
 .content p {
   text-align: justify;
-  line-height: 1.45;
+  line-height: 1.8;
+  font-size: 1.09em;
 }
 
 // Fix background color for single line monospaced text
