--- a/site/layouts/partials/layout/sidebar.html
+++ b/site/layouts/partials/layout/sidebar.html
@@ -1,8 +1,11 @@
 <!-- Advertisement -->
-<section class="hero is-info">
-    <div class="hero-body">
-        <div class="has-text-centered">
-            <ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-4126545610079023" data-ad-slot="1038554045"></ins>
-        </div>
-    </div>
-</section>
+<div class="px-md">
+    <!-- yuzu-auto-resize-2 -->
+    <ins class="adsbygoogle"
+        style="display:block; margin-left:25px;"
+        data-ad-client="ca-pub-4126545610079023"
+        data-ad-slot="6276099127"
+        data-ad-format="auto"></ins>
+    <br>
+    <p class="is-size-6 has-text-centered">Advertisement</p>
+</div>
