Directions in content is a thing.

--- a/site/layouts/page/downloads.html
+++ b/site/layouts/page/downloads.html
@@ -19,7 +19,7 @@
             <article class="message is-danger" id="platform-unsupported">
                 <div class="message-body has-text-white my-5">
                     Currently, yuzu doesn't support your platform. If you are running Windows x64 or Linux x64 however,
-                    choose one of the options below.
+                    choose one of the options above.
                 </div>
             </article>
         </div>
