--- a/site/layouts/partials/inline/menuSvg.html
+++ b/site/layouts/partials/inline/menuSvg.html
@@ -1,150 +1,1 @@
-<svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   version="1.1"
-   id="svg2099"
-   xml:space="preserve"
-   viewBox="0 0 862.35199 233.50932"
-   sodipodi:docname="yuzu-logo-banner.svg"
-   inkscape:version="0.92.2 (5c3e80d, 2017-08-06)" class="navbar-logo"><metadata
-     id="metadata2105"><rdf:RDF><cc:Work
-         rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-           rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs
-     id="defs2103"><clipPath
-       clipPathUnits="userSpaceOnUse"
-       id="clipPath2115"><path
-         d="M 0,175.218 H 630.264 V 0 H 0 Z"
-         id="path2113"
-         inkscape:connector-curvature="0" /></clipPath><clipPath
-       clipPathUnits="userSpaceOnUse"
-       id="clipPath2127"><path
-         d="M 0,175.218 H 630.264 V 0 H 0 Z"
-         id="path2125"
-         inkscape:connector-curvature="0" /></clipPath><clipPath
-       clipPathUnits="userSpaceOnUse"
-       id="clipPath2139"><path
-         d="M 0,175.218 H 630.264 V 0 H 0 Z"
-         id="path2137"
-         inkscape:connector-curvature="0" /></clipPath><clipPath
-       clipPathUnits="userSpaceOnUse"
-       id="clipPath2155"><path
-         d="M 0,175.218 H 630.264 V 0 H 0 Z"
-         id="path2153"
-         inkscape:connector-curvature="0" /></clipPath><clipPath
-       clipPathUnits="userSpaceOnUse"
-       id="clipPath2171"><path
-         d="M 0,175.218 H 630.264 V 0 H 0 Z"
-         id="path2169"
-         inkscape:connector-curvature="0" /></clipPath><clipPath
-       clipPathUnits="userSpaceOnUse"
-       id="clipPath2183"><path
-         d="M 0,175.218 H 630.264 V 0 H 0 Z"
-         id="path2181"
-         inkscape:connector-curvature="0" /></clipPath></defs><sodipodi:namedview
-     pagecolor="#ffffff"
-     bordercolor="#666666"
-     borderopacity="1"
-     objecttolerance="10"
-     gridtolerance="10"
-     guidetolerance="10"
-     inkscape:pageopacity="0"
-     inkscape:pageshadow="2"
-     inkscape:window-width="1920"
-     inkscape:window-height="1017"
-     id="namedview2101"
-     showgrid="false"
-     inkscape:zoom="1.1712861"
-     inkscape:cx="401.4447"
-     inkscape:cy="59.691513"
-     inkscape:window-x="-8"
-     inkscape:window-y="-8"
-     inkscape:window-maximized="1"
-     inkscape:current-layer="leftjoy"
-     inkscape:pagecheckerboard="true"
-     fit-margin-top="0"
-     fit-margin-left="0"
-     fit-margin-right="0"
-     fit-margin-bottom="0" /><g
-     id="g2107"
-     inkscape:groupmode="layer"
-     inkscape:label="yuzu-logo-banner"
-     transform="matrix(1.3333333,0,0,-1.3333333,21.999999,233.51839)"><g
-       id="z"
-       inkscape:label="#g2109"><g
-         id="g2111"
-         clip-path="url(#clipPath2115)"><g
-           id="g2117"
-           transform="translate(508.6674,2.6911)"><path
-             d="m 0,0 h -103.161 c -0.437,0 -1.062,0.989 -1.062,3.052 0,2.062 1.062,3.456 1.062,3.456 l 93.589,162.059 h -86.499 c -1.155,0.015 -1.132,1.899 -1.132,1.899 0,0 -0.023,1.902 1.132,1.902 0.739,0 90.198,0.178 91.171,0 1.302,-0.238 1.13,-2.238 1.13,-2.238 0,0 -0.109,-1.36 -1.13,-2.981 L -98.843,4.735 H 0 C 1.684,4.479 1.418,2.072 1.418,2.072 1.418,2.072 1.419,0.057 0,0"
-             style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2119"
-             inkscape:connector-curvature="0" /></g></g></g><g
-       id="y"
-       inkscape:label="#g2121"><g
-         id="g2123"
-         clip-path="url(#clipPath2127)"><g
-           id="g2129"
-           transform="translate(210.9645,4.9888)"><path
-             d="M 0,0 C 31.819,0 44.729,15.583 44.729,46.738 V 74.572 C 42.243,64.241 37.392,56.015 30.173,49.89 21.822,42.71 11.328,39.124 -1.308,39.124 c -30.242,0 -45.358,15.578 -45.358,46.739 v 84.287 h 4.738 V 86.125 c 0,-11.73 2.931,-21.269 8.802,-28.621 6.992,-8.927 17.601,-13.391 31.818,-13.391 16.925,0 29.334,6.564 37.236,19.693 5.865,9.625 8.801,21.88 8.801,36.761 v 69.583 h 4.739 V 46.476 C 49.468,12.169 35.198,-4.311 0,-4.982"
-             style="fill:#ffffff;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2131"
-             inkscape:connector-curvature="0" /></g></g></g><g
-       id="logo-u1"
-       inkscape:label="#g2133"><g
-         id="g2135"
-         clip-path="url(#clipPath2139)"><g
-           id="g2141"
-           transform="translate(335.6116,2.6911)"><path
-             d="m 0,0 c -18.845,0 -32.088,6.628 -39.728,19.888 -6.112,10.235 -9.168,25.34 -9.168,45.314 v 107.245 h 3.82 V 65.454 C -45.076,25.006 -30.051,4.783 0,4.783"
-             style="fill:#ff3c28;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2143"
-             inkscape:connector-curvature="0" /></g><g
-           id="g2145"
-           transform="translate(335.6116,7.4738)"><path
-             d="m 0,0 c 30.051,0 45.076,19.888 45.076,59.664 v 108.001 h 3.821 V 59.916 C 48.897,39.941 45.841,24.923 39.728,14.853 32.088,1.762 18.845,-4.783 0,-4.783"
-             style="fill:#ff3c28;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2147"
-             inkscape:connector-curvature="0" /></g></g></g><g
-       id="logo-u2"
-       inkscape:label="#g2149"><g
-         id="g2151"
-         clip-path="url(#clipPath2155)"><g
-           id="g2157"
-           transform="translate(581.3674,2.6911)"><path
-             d="m 0,0 c -18.845,0 -32.088,6.628 -39.728,19.888 -6.112,10.235 -9.168,25.34 -9.168,45.314 v 107.245 h 3.82 V 65.454 C -45.076,25.006 -30.051,4.783 0,4.783"
-             style="fill:#0ab9e6;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2159"
-             inkscape:connector-curvature="0" /></g><g
-           id="g2161"
-           transform="translate(581.3674,7.4738)"><path
-             d="m 0,0 c 30.051,0 45.076,19.888 45.076,59.664 v 108.001 h 3.821 V 59.916 C 48.897,39.941 45.841,24.923 39.728,14.853 32.088,1.762 18.845,-4.783 0,-4.783"
-             style="fill:#0ab9e6;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2163"
-             inkscape:connector-curvature="0" /></g></g></g><g
-       id="logo-leftjoy"
-       inkscape:label="#g2165"><g
-         id="g2167"
-         clip-path="url(#clipPath2171)"
-         transform="translate(-16.5)"><g
-           id="g2173"
-           transform="translate(68.9789,174.5876)"><path
-             d="m 0,0 c -38.096,0 -68.979,-30.883 -68.979,-68.979 0,-38.096 30.883,-68.979 68.979,-68.979 z m -5,-5.193 v -127.571 c -32.951,2.558 -58.979,30.189 -58.979,63.785 0,33.597 26.028,61.228 58.979,63.786"
-             style="fill:#0ab9e6;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2175"
-             inkscape:connector-curvature="0" /></g></g></g><g
-       id="logo-rightjoy"
-       inkscape:label="#g2177"
-       transform="translate(-16.5)"><g
-         id="g2179"
-         clip-path="url(#clipPath2183)"><g
-           id="g2185"
-           transform="translate(86.2236,140.0981)"><path
-             d="m 0,0 v -137.958 c 38.096,0 68.979,30.883 68.979,68.979 C 68.979,-30.883 38.096,0 0,0 m 5,-5.193 c 32.951,-2.558 58.979,-30.19 58.979,-63.786 0,-33.596 -26.028,-61.227 -58.979,-63.785 V -5.193"
-             style="fill:#ff3c28;fill-opacity:1;fill-rule:nonzero;stroke:none"
-             id="path2187"
-             inkscape:connector-curvature="0" /></g></g></g></g></svg>
+<svg xmlns="http://www.w3.org/2000/svg" class="navbar-logo" viewBox="0 0 515.83 163.11"><defs><style>.cls-1{fill:#fff;}.cls-2{fill:#ff3c28;}.cls-3{fill:#0ab9e6;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M515.83,23.23v73c0,14.5-2.24,25.24-6.84,32.82-5.92,10.15-16.2,15.32-30.53,15.32s-24.62-5.23-30.58-15.57c-4.56-7.64-6.79-18.42-6.79-32.92V23.23a4.51,4.51,0,0,1,4.51-4.51h2.28a4.51,4.51,0,0,1,4.51,4.51v72.5c0,33.53,14.88,37.4,26.07,37.4,12.14,0,26.08-4.17,26.08-36.71V23.23a4.51,4.51,0,0,1,4.51-4.51h2.27A4.51,4.51,0,0,1,515.83,23.23Z"/><path class="cls-1" d="M421.34,144.4H353.45c-2.35,0-4.72-1.88-4.72-6.08a8.32,8.32,0,0,1,1.33-4.49L410.39,29.36H360.8a4.51,4.51,0,0,1-4.51-4.5V23.28a4.51,4.51,0,0,1,4.48-4.51h.81c58.68-.11,59.11,0,59.66.07a5.19,5.19,0,0,1,4,5.8,8.74,8.74,0,0,1-1.32,3.75L363.33,133.17h58a4.51,4.51,0,0,1,4.51,4.51v2.21A4.51,4.51,0,0,1,421.34,144.4Z"/><path class="cls-1" d="M248.45,23.23v82.06c0,26-11.8,38.44-37.12,39.09h-.12a4.51,4.51,0,0,1-4.51-4.51V137.5a4.51,4.51,0,0,1,4.48-4.5c18.49-.15,26-8.23,26-27.9v-2.37a32.34,32.34,0,0,1-3.34,3.28c-6.39,5.5-14.5,8.29-24.07,8.29-22.86,0-35-12.41-35-35.89V23.23a4.52,4.52,0,0,1,4.51-4.51h2.22a4.52,4.52,0,0,1,4.5,4.51v55c0,7.6,1.82,14.22,5,18.18,3.57,4.56,9.17,6.49,18.75,6.49,10.13,0,17.32-3.76,22-11.5,3.61-5.92,5.43-13.66,5.43-23V23.23a4.52,4.52,0,0,1,4.51-4.51h2.22A4.52,4.52,0,0,1,248.45,23.23Z"/><path class="cls-1" d="M338.12,23.23v73c0,14.5-2.24,25.24-6.84,32.82-5.92,10.15-16.2,15.32-30.53,15.32s-24.62-5.23-30.58-15.57c-4.56-7.64-6.79-18.42-6.79-32.92V23.23a4.51,4.51,0,0,1,4.51-4.51h2.28a4.51,4.51,0,0,1,4.51,4.51v72.5c0,33.53,14.88,37.4,26.07,37.4,12.14,0,26.08-4.17,26.08-36.71V23.23a4.51,4.51,0,0,1,4.51-4.51h2.27A4.51,4.51,0,0,1,338.12,23.23Z"/><g id="g823"><g id="right"><g id="g827"><g id="g833"><path id="path835" class="cls-2" d="M81.56,32.62V163.11a65.25,65.25,0,0,0,0-130.49M94.3,46.91a52.54,52.54,0,0,1,0,101.91V46.91"/></g></g></g><g id="left"><g id="g839"><g id="g845"><path id="path847" class="cls-3" d="M65.24,0a65.25,65.25,0,0,0,0,130.49ZM52.5,14.29V116.2A52.52,52.52,0,0,1,28.12,28.12,52.16,52.16,0,0,1,52.5,14.29"/></g></g></g></g></g></g></svg>
