--- a/site/layouts/partials/homepage/heroContents.html
+++ b/site/layouts/partials/homepage/heroContents.html
@@ -4,7 +4,7 @@
         <h2 class="title">{{ .Site.Params.Tagline }}</h2>
         <div class="content">
             <p>yuzu is an experimental open-source emulator for the Nintendo Switch from the creators of Citra.</p>
-            <p>It is written in C++ with portability in mind, with builds actively maintained for Windows and Linux.</p>
+            <p>It is written in C++ with portability in mind, with builds actively maintained for Windows Linux and Android.</p>
         </div>
         <div>
             <a class="button mr-sm is-medium is-light is-hidden-touch" href="/downloads">
